trim unused shaders; trim unused code; add deployment event

--- a/Phantom/Phantom.vcxproj
+++ b/Phantom/Phantom.vcxproj
@@ -235,6 +235,9 @@
     <QtModules>core;gui;qml;quick;quickcontrols2;widgets;opengl</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
     <QtQMLDebugEnable>false</QtQMLDebugEnable>
+    <QtDeploy>false</QtDeploy>
+    <QMakeExtraArgs>
+    </QMakeExtraArgs>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtInstall>6.4.2_msvc2019_64</QtInstall>
@@ -258,6 +261,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <IncludePath>include;.;src;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
     <LibraryPath>lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <PostBuildEventUseInBuild>true</PostBuildEventUseInBuild>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
   </PropertyGroup>
@@ -269,8 +273,8 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>"$(QtToolsPath)\windeployqt.exe" --list target --no-system-d3d-compiler --no-virtualkeyboard --no-patchqt --qmldir "$(ProjectDir)qml" --no-translations "$(TargetPath)"</Command>
+      <Message>旧事件为 xcopy /y "$(ProjectDir)dll\*.dll" "$(TargetDir)" </Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
